--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -57,6 +57,7 @@
     "googleapis": "130",
     "he": "^1.2.0",
     "html-to-text": "^9.0.5",
+    "idb": "^8.0.0",
     "json5": "^2.2.3",
     "linkify-react": "^4.1.3",
     "linkifyjs": "^4.1.3",
