--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -84,6 +84,7 @@
     "react-hotkeys-hook": "^4.4.4",
     "react-resizable-panels": "^1.0.9",
     "react-youtube": "^10.1.0",
+    "redis": "^4.6.12",
     "server-only": "^0.0.1",
     "sonner": "^1.3.1",
     "swr": "^2.2.4",
