--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -77,7 +77,7 @@
     "next-auth": "5.0.0-beta.4",
     "node-email-reply-parser": "^0.1.4",
     "nodemailer": "^6.9.10",
-    "novel": "0.1.22",
+    "novel": "^0.2.6",
     "openai": "^4.28.0",
     "p-queue": "^8.0.1",
     "posthog-js": "^1.108.3",
