--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@auth/core": "^0.24.0",
     "@auth/prisma-adapter": "^1.1.0",
-    "@baselime/node-opentelemetry": "^0.3.8",
+    "@baselime/node-opentelemetry": "^0.4.3",
     "@formkit/auto-animate": "^0.8.1",
     "@headlessui/react": "^1.7.18",
     "@hookform/resolvers": "^3.3.4",
@@ -25,8 +25,8 @@
     "@lemonsqueezy/lemonsqueezy.js": "^2.2.0",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
-    "@next/mdx": "^14.1.0",
-    "@next/third-parties": "^14.1.0",
+    "@next/mdx": "^14.1.2",
+    "@next/third-parties": "^14.1.2",
     "@prisma/client": "^5.10.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -41,17 +41,17 @@
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-toggle": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@sentry/nextjs": "^7.103.0",
+    "@sentry/nextjs": "^7.105.0",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
-    "@tanstack/react-query": "^5.24.1",
+    "@tanstack/react-query": "^5.24.8",
     "@tremor/react": "^3.14.1",
     "@types/mdx": "^2.0.11",
     "@upstash/redis": "^1.28.4",
     "@vercel/analytics": "^1.2.2",
     "@vercel/speed-insights": "^1.0.10",
-    "ai": "^2.2.37",
+    "ai": "^3.0.5",
     "bull": "^4.12.2",
     "capital-case": "^1.0.4",
     "cheerio": "1.0.0-rc.12",
@@ -61,7 +61,7 @@
     "date-fns": "^3.3.1",
     "encoding": "^0.1.13",
     "eslint": "8.57.0",
-    "eslint-config-next": "14.1.0",
+    "eslint-config-next": "14.1.2",
     "gmail-api-parse-message": "^2.1.2",
     "google": "link:@next/third-parties/google",
     "googleapis": "133",
@@ -73,8 +73,8 @@
     "linkify-react": "^4.1.3",
     "linkifyjs": "^4.1.3",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.343.0",
-    "next": "14.1.0",
+    "lucide-react": "^0.344.0",
+    "next": "14.1.2",
     "next-auth": "5.0.0-beta.4",
     "node-email-reply-parser": "^0.1.4",
     "nodemailer": "^6.9.11",
@@ -89,18 +89,21 @@
     "react-day-picker": "^8.10.0",
     "react-dom": "18.2.0",
     "react-dom-confetti": "^0.2.0",
-    "react-hook-form": "^7.50.1",
+    "react-hook-form": "^7.51.0",
     "react-hotkeys-hook": "^4.5.0",
-    "react-resizable-panels": "^2.0.11",
+    "react-intersection-observer": "^9.8.1",
+    "react-resizable-panels": "^2.0.12",
+    "react-textarea-autosize": "^8.5.3",
     "react-youtube": "^10.1.0",
     "server-only": "^0.0.1",
-    "sonner": "^1.4.2",
+    "sonner": "^1.4.3",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.3.3",
     "usehooks-ts": "^2.15.1",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zod-to-json-schema": "^3.22.4"
   },
   "devDependencies": {
     "@headlessui/tailwindcss": "^0.2.0",
@@ -112,9 +115,9 @@
     "@types/lodash": "^4.14.202",
     "@types/node": "20.11.24",
     "@types/nodemailer": "^6.4.14",
-    "@types/react": "18.2.61",
+    "@types/react": "18.2.62",
     "@types/react-dom": "18.2.19",
-    "autoprefixer": "10.4.17",
+    "autoprefixer": "10.4.18",
     "dotenv": "^16.4.5",
     "eslint-config-custom": "workspace:*",
     "jest": "^29.7.0",
