--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,6 +12,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.18.0",
     "@auth/core": "^0.28.0",
     "@auth/prisma-adapter": "^1.5.0",
     "@baselime/node-opentelemetry": "0.3.8",
