--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,7 +15,7 @@
     "@anthropic-ai/sdk": "^0.18.0",
     "@auth/core": "^0.28.0",
     "@auth/prisma-adapter": "^1.5.0",
-    "@baselime/node-opentelemetry": "0.3.8",
+    "@baselime/node-opentelemetry": "^0.4.8",
     "@formkit/auto-animate": "^0.8.1",
     "@headlessui/react": "^1.7.18",
     "@hookform/resolvers": "^3.3.4",
