--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,7 +12,8 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@anthropic-ai/sdk": "^0.24.0",
+    "@ai-sdk/anthropic": "^0.0.24",
+    "@ai-sdk/openai": "^0.0.33",
     "@auth/core": "^0.33.0",
     "@auth/prisma-adapter": "^2.3.0",
     "@formkit/auto-animate": "^0.8.2",
@@ -22,8 +23,6 @@
     "@inboxzero/resend": "workspace:*",
     "@inboxzero/tinybird": "workspace:*",
     "@inboxzero/tinybird-ai-analytics": "workspace:*",
-    "@langchain/anthropic": "^0.2.1",
-    "@langchain/core": "^0.2.8",
     "@lemonsqueezy/lemonsqueezy.js": "^3.2.0",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
