--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\"",
     "prettier": "npx prettier --write \"**/*.{ts,tsx}\"",
     "prepare": "husky install",
-    "ncu": "ncu -u -ws"
+    "ncu": "ncu -u -ws",
+    "format-and-lint": "biome check .",
+    "format-and-lint:fix": "biome check . --write"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.8.2",
     "@turbo/gen": "^1.11.3",
     "eslint": "^8.56.0",
     "eslint-config-custom": "workspace:*",
