--- a/turbo.json
+++ b/turbo.json
@@ -1,27 +1,47 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "globalDependencies": [
-    "**/.env.*local"
-  ],
+  "globalDependencies": ["**/.env.*local"],
   "tasks": {
     "build": {
       "env": [
+        "NODE_ENV",
         "DATABASE_URL",
         "DIRECT_URL",
-        "GOOGLE_CLIENT_ID",
-        "GOOGLE_CLIENT_SECRET",
         "NEXTAUTH_URL",
         "NEXTAUTH_SECRET",
+        "GOOGLE_CLIENT_ID",
+        "GOOGLE_CLIENT_SECRET",
+        "GOOGLE_CLIENT_ID",
+        "GOOGLE_CLIENT_SECRET",
         "OPENAI_API_KEY",
+        "ANTHROPIC_API_KEY",
         "UPSTASH_REDIS_URL",
         "UPSTASH_REDIS_TOKEN",
         "GOOGLE_PUBSUB_TOPIC_NAME",
-        "LEMON_SQUEEZY_SIGNING_SECRET",
-        "LEMON_SQUEEZY_API_KEY",
+        "GOOGLE_PUBSUB_VERIFICATION_TOKEN",
         "SENTRY_AUTH_TOKEN",
         "SENTRY_ORGANIZATION",
         "SENTRY_PROJECT",
+        "LOG_ZOD_ERRORS",
+        "LEMON_SQUEEZY_SIGNING_SECRET",
+        "LEMON_SQUEEZY_API_KEY",
+        "TINYBIRD_TOKEN",
+        "TINYBIRD_BASE_URL",
+        "ENCRYPT_SECRET",
+        "ENCRYPT_SALT",
+        "POSTHOG_API_SECRET",
+        "POSTHOG_PROJECT_ID",
+        "RESEND_API_KEY",
+        "RESEND_AUDIENCE_ID",
+        "CRON_SECRET",
+        "LOOPS_API_SECRET",
+        "ADMINS",
+
         "NEXT_PUBLIC_LEMON_STORE_ID",
+        "NEXT_PUBLIC_BASIC_MONTHLY_PAYMENT_LINK",
+        "NEXT_PUBLIC_BASIC_ANNUALLY_PAYMENT_LINK",
+        "NEXT_PUBLIC_BASIC_MONTHLY_VARIANT_ID",
+        "NEXT_PUBLIC_BASIC_ANNUALLY_VARIANT_ID",
         "NEXT_PUBLIC_PRO_MONTHLY_PAYMENT_LINK",
         "NEXT_PUBLIC_PRO_ANNUALLY_PAYMENT_LINK",
         "NEXT_PUBLIC_PRO_MONTHLY_VARIANT_ID",
@@ -32,16 +52,27 @@
         "NEXT_PUBLIC_BUSINESS_ANNUALLY_VARIANT_ID",
         "NEXT_PUBLIC_LIFETIME_PAYMENT_LINK",
         "NEXT_PUBLIC_LIFETIME_VARIANT_ID",
+        "NEXT_PUBLIC_LIFETIME_EXTRA_SEATS_PAYMENT_LINK",
+        "NEXT_PUBLIC_LIFETIME_EXTRA_SEATS_VARIANT_ID",
+        "LICENSE_1_SEAT_VARIANT_ID",
+        "LICENSE_3_SEAT_VARIANT_ID",
+        "LICENSE_5_SEAT_VARIANT_ID",
+        "LICENSE_10_SEAT_VARIANT_ID",
+        "LICENSE_25_SEAT_VARIANT_ID",
         "NEXT_PUBLIC_FREE_UNSUBSCRIBE_CREDITS",
         "NEXT_PUBLIC_CALL_LINK",
         "NEXT_PUBLIC_POSTHOG_KEY",
+        "NEXT_PUBLIC_POSTHOG_HERO_AB",
+        "NEXT_PUBLIC_POSTHOG_ONBOARDING_SURVEY_ID",
+        "NEXT_PUBLIC_BASE_URL",
         "NEXT_PUBLIC_CONTACTS_ENABLED",
-        "NEXT_PUBLIC_SENTRY_DSN"
+        "NEXT_PUBLIC_SENTRY_DSN",
+        "NEXT_PUBLIC_SUPPORT_EMAIL",
+        "NEXT_PUBLIC_GTM_ID",
+        "NEXT_PUBLIC_CRISP_WEBSITE_ID",
+        "NEXT_PUBLIC_DISABLE_TINYBIRD"
       ],
-      "outputs": [
-        ".next/**",
-        "!.next/cache/**"
-      ]
+      "outputs": [".next/**", "!.next/cache/**"]
     },
     "lint": {},
     "dev": {
