--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,13 +12,13 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "^0.0.24",
-    "@ai-sdk/openai": "^0.0.33",
+    "@ai-sdk/anthropic": "^0.0.33",
+    "@ai-sdk/openai": "^0.0.40",
     "@auth/core": "^0.34.1",
     "@auth/prisma-adapter": "^2.4.1",
     "@formkit/auto-animate": "^0.8.2",
-    "@headlessui/react": "^2.1.1",
-    "@hookform/resolvers": "^3.6.0",
+    "@headlessui/react": "^2.1.2",
+    "@hookform/resolvers": "^3.9.0",
     "@inboxzero/loops": "workspace:*",
     "@inboxzero/resend": "workspace:*",
     "@inboxzero/tinybird": "workspace:*",
@@ -26,9 +26,9 @@
     "@lemonsqueezy/lemonsqueezy.js": "^3.2.0",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
-    "@next/mdx": "^14.2.4",
-    "@next/third-parties": "^14.2.4",
-    "@prisma/client": "^5.16.0",
+    "@next/mdx": "^14.2.5",
+    "@next/third-parties": "^14.2.5",
+    "@prisma/client": "^5.17.0",
     "@radix-ui/react-avatar": "^1.1.0",
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.1",
@@ -41,20 +41,20 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.0",
     "@radix-ui/react-toggle": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.1",
-    "@sentry/nextjs": "^8.12.0",
-    "@serwist/next": "^9.0.3",
-    "@t3-oss/env-nextjs": "^0.10.1",
+    "@radix-ui/react-tooltip": "^1.1.2",
+    "@sentry/nextjs": "^8.20.0",
+    "@serwist/next": "^9.0.5",
+    "@t3-oss/env-nextjs": "^0.11.0",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.13",
-    "@tanstack/react-query": "^5.48.0",
+    "@tanstack/react-query": "^5.51.15",
     "@tremor/react": "^3.17.4",
     "@types/mdx": "^2.0.13",
-    "@upstash/redis": "^1.31.6",
+    "@upstash/redis": "^1.33.0",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
-    "ai": "^3.2.10",
-    "bull": "^4.14.0",
+    "ai": "^3.2.37",
+    "bull": "^4.15.1",
     "capital-case": "^1.0.4",
     "cheerio": "1.0.0-rc.12",
     "class-variance-authority": "^0.7.0",
@@ -63,44 +63,44 @@
     "crisp-sdk-web": "^1.0.25",
     "date-fns": "^3.6.0",
     "encoding": "^0.1.13",
-    "eslint": "^9.5.0",
-    "eslint-config-next": "14.2.4",
+    "eslint": "^9.8.0",
+    "eslint-config-next": "14.2.5",
     "gmail-api-parse-message": "^2.1.2",
     "google": "link:@next/third-parties/google",
     "googleapis": "140",
     "he": "^1.2.0",
     "html-to-text": "^9.0.5",
-    "jotai": "^2.8.3",
+    "jotai": "^2.9.1",
     "json5": "^2.2.3",
     "linkify-react": "^4.1.3",
     "linkifyjs": "^4.1.3",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.397.0",
-    "next": "14.2.4",
+    "lucide-react": "^0.416.0",
+    "next": "14.2.5",
     "next-auth": "5.0.0-beta.4",
     "next-axiom": "^1.3.0",
     "node-email-reply-parser": "^0.1.4",
     "nodemailer": "^6.9.14",
-    "novel": "^0.3.1",
-    "openai": "^4.52.1",
+    "novel": "^0.5.0",
+    "openai": "^4.53.2",
     "p-queue": "^8.0.1",
-    "posthog-js": "^1.141.4",
+    "posthog-js": "^1.150.0",
     "posthog-node": "^4.0.1",
-    "prettier": "3.3.2",
+    "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
     "react": "18.3.1",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "18.3.1",
     "react-dom-confetti": "^0.2.0",
-    "react-hook-form": "^7.52.0",
-    "react-resizable-panels": "^2.0.19",
+    "react-hook-form": "^7.52.1",
+    "react-resizable-panels": "^2.0.22",
     "react-youtube": "^10.1.0",
     "server-only": "^0.0.1",
     "sonner": "^1.5.0",
     "swr": "^2.2.5",
-    "tailwind-merge": "^2.3.0",
+    "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.5.2",
+    "typescript": "5.5.4",
     "usehooks-ts": "^3.1.0",
     "zod": "^3.23.8",
     "zod-to-json-schema": "^3.23.1"
@@ -110,8 +110,8 @@
     "@testing-library/react": "^16.0.0",
     "@types/he": "^1.2.3",
     "@types/html-to-text": "^9.0.4",
-    "@types/lodash": "^4.17.5",
-    "@types/node": "20.14.9",
+    "@types/lodash": "^4.17.7",
+    "@types/node": "20.14.12",
     "@types/nodemailer": "^6.4.15",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
@@ -119,17 +119,17 @@
     "dotenv": "^16.4.5",
     "eslint-config-custom": "workspace:*",
     "jiti": "^1.21.6",
-    "jsdom": "^24.1.0",
-    "postcss": "8.4.38",
-    "prettier": "3.3.2",
+    "jsdom": "^24.1.1",
+    "postcss": "8.4.40",
+    "prettier": "3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.5",
-    "prisma": "^5.16.0",
-    "serwist": "^9.0.3",
-    "tailwindcss": "3.4.4",
+    "prisma": "^5.17.0",
+    "serwist": "^9.0.5",
+    "tailwindcss": "3.4.7",
     "tsconfig": "workspace:*",
-    "turbo": "^2.0.5",
+    "turbo": "^2.0.9",
     "vite-tsconfig-paths": "^4.3.2",
-    "vitest": "1.6.0"
+    "vitest": "2.0.4"
   },
   "engines": {
     "node": ">=18.17"
