--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,11 +1,14 @@
 {
   "extends": "tsconfig/nextjs.json",
   "compilerOptions": {
-    "baseUrl": ".",
+    "baseUrl": "./",
     "plugins": [{ "name": "next" }],
     "paths": {
       "@/*": ["./*"],
-      "@next/third-parties/google": ["./node_modules/@next/third-parties/dist/google"]
+      "@next/third-parties/google": [
+        "./node_modules/@next/third-parties/dist/google"
+      ],
+      "sanity/*": ["../node_modules/sanity/*"]
     },
     "target": "ES2017"
   },
