--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -2,15 +2,24 @@
   "extends": "tsconfig/nextjs.json",
   "compilerOptions": {
     "baseUrl": "./",
-    "plugins": [{ "name": "next" }],
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
     "paths": {
-      "@/*": ["./*"],
+      "@/*": [
+        "./*"
+      ],
       "@next/third-parties/google": [
         "./node_modules/@next/third-parties/dist/google"
       ],
-      "sanity/*": ["../node_modules/sanity/*"]
+      "sanity/*": [
+        "../node_modules/sanity/*"
+      ]
     },
-    "target": "ES2017"
+    "target": "ES2017",
+    "strictNullChecks": true
   },
   "include": [
     "next-env.d.ts",
@@ -19,5 +28,8 @@
     ".next/types/**/*.ts",
     "./env.ts"
   ],
-  "exclude": ["node_modules", "public/sw.js"]
+  "exclude": [
+    "node_modules",
+    "public/sw.js"
+  ]
 }
