--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,6 +19,8 @@
     "@auth/core": "^0.34.2",
     "@auth/prisma-adapter": "^2.4.2",
     "@formkit/auto-animate": "^0.8.2",
+    "@googleapis/gmail": "^12.0.0",
+    "@googleapis/people": "^3.0.9",
     "@headlessui/react": "^2.1.8",
     "@hookform/resolvers": "^3.9.0",
     "@inboxzero/loops": "workspace:*",
@@ -77,7 +79,6 @@
     "framer-motion": "^11.5.4",
     "gmail-api-parse-message": "^2.1.2",
     "google": "link:@next/third-parties/google",
-    "googleapis": "144",
     "he": "^1.2.0",
     "html-to-text": "^9.0.5",
     "jotai": "^2.9.3",
