--- a/apps/unsubscriber/package.json
+++ b/apps/unsubscriber/package.json
@@ -12,19 +12,19 @@
   },
   "devDependencies": {
     "@types/dotenv": "^8.2.0",
-    "@types/node": "22.5.4",
+    "@types/node": "22.7.5",
     "playwright": "^1.47.2",
     "tsx": "^4.19.1",
-    "typescript": "^5.6.2"
+    "typescript": "5.6.3"
   },
   "dependencies": {
     "@ai-sdk/amazon-bedrock": "^0.0.29",
     "@ai-sdk/anthropic": "^0.0.51",
     "@ai-sdk/google": "^0.0.51",
-    "@ai-sdk/openai": "^0.0.59",
+    "@ai-sdk/openai": "^0.0.66",
     "@fastify/cors": "^10.0.1",
     "@t3-oss/env-core": "^0.11.1",
-    "ai": "^3.3.36",
+    "ai": "^3.4.9",
     "dotenv": "^16.4.5",
     "fastify": "^5.0.0",
     "zod": "^3.23.8"
