--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -59,7 +59,7 @@
     "@tailwindcss/typography": "^0.5.15",
     "@tanstack/react-query": "^5.59.8",
     "@tremor/react": "^3.18.3",
-    "@types/mdx": "^2.0.13",
+    "zod-to-json-schema": "^3.23.3",
     "@upstash/redis": "^1.34.3",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
@@ -98,7 +98,7 @@
     "p-queue": "^8.0.1",
     "posthog-js": "^1.167.0",
     "posthog-node": "^4.2.0",
-    "prettier": "3.3.3",
+    "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "react": "18.3.1",
     "react-day-picker": "8.10.1",
@@ -116,8 +116,7 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.6.3",
     "usehooks-ts": "^3.1.0",
-    "zod": "^3.23.8",
-    "zod-to-json-schema": "^3.23.3"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@headlessui/tailwindcss": "^0.2.1",
@@ -136,7 +135,7 @@
     "jiti": "^1.21.6",
     "jsdom": "^25.0.1",
     "postcss": "8.4.47",
-    "prettier": "3.3.3",
+    "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "prisma": "^5.20.0",
     "serwist": "^9.0.9",
@@ -144,7 +143,8 @@
     "tsconfig": "workspace:*",
     "turbo": "^2.1.3",
     "vite-tsconfig-paths": "^5.0.1",
-    "vitest": "2.1.2"
+    "vitest": "2.1.2",
+    "@types/mdx": "^2.0.13"
   },
   "engines": {
     "node": ">=18.17"
