--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -8,12 +8,12 @@
     "react-internal.js"
   ],
   "devDependencies": {
-    "@vercel/style-guide": "^6.0.0",
-    "eslint-config-turbo": "^2.1.3", 
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-only-warn": "^1.1.0",
-    "@typescript-eslint/parser": "^8.8.1",
     "@typescript-eslint/eslint-plugin": "^8.8.1",
-    "typescript": "^5.6.3"
+    "@typescript-eslint/parser": "^8.8.1",
+    "@vercel/style-guide": "^6.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-turbo": "^2.1.3",
+    "eslint-plugin-only-warn": "^1.1.0",
+    "typescript": "5.6.3"
   }
 }
