--- a/packages/tinybird/package.json
+++ b/packages/tinybird/package.json
@@ -4,11 +4,11 @@
   "main": "src/index.ts",
   "dependencies": {
     "@chronark/zod-bird": "0.3.10",
-    "zod": "3.23.8"
+    "zod": "^3.23.8"
   },
   "devDependencies": {
-    "tsconfig": "workspace:*",
     "@types/node": "22.7.5",
+    "tsconfig": "workspace:*",
     "typescript": "5.6.3"
   }
 }
