--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -H 0.0.0.0",
+    "dev": "next dev --turbo -H 0.0.0.0",
     "build": "NODE_OPTIONS=--max_old_space_size=8192 prisma migrate deploy && next build",
     "start": "next start",
     "lint": "next lint",
@@ -30,8 +30,8 @@
     "@lemonsqueezy/lemonsqueezy.js": "^3.3.1",
     "@mdx-js/loader": "^3.0.1",
     "@mdx-js/react": "^3.0.1",
-    "@next/mdx": "^14.2.15",
-    "@next/third-parties": "^14.2.15",
+    "@next/mdx": "15.0.0",
+    "@next/third-parties": "15.0.0",
     "@portabletext/react": "^3.1.0",
     "@prisma/client": "^5.20.0",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -74,7 +74,7 @@
     "diff": "^7.0.0",
     "encoding": "^0.1.13",
     "eslint": "^8.57.1",
-    "eslint-config-next": "14.2.15",
+    "eslint-config-next": "15.0.0",
     "framer-motion": "^11.11.7",
     "gmail-api-parse-message": "^2.1.2",
     "google": "link:@next/third-parties/google",
@@ -86,7 +86,7 @@
     "linkifyjs": "^4.1.3",
     "lodash": "^4.17.21",
     "lucide-react": "^0.451.0",
-    "next": "14.2.15",
+    "next": "15.0.0",
     "next-auth": "5.0.0-beta.22",
     "next-axiom": "^1.5.1",
     "next-sanity": "9",
@@ -99,9 +99,9 @@
     "posthog-node": "^4.2.0",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
-    "react": "18.3.1",
+    "react": "19.0.0-rc-65a56d0e-20241020",
     "react-day-picker": "8.10.1",
-    "react-dom": "18.3.1",
+    "react-dom": "19.0.0-rc-65a56d0e-20241020",
     "react-dom-confetti": "^0.2.0",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.4",
@@ -129,8 +129,8 @@
     "@types/mdx": "^2.0.13",
     "@types/node": "22.7.5",
     "@types/nodemailer": "^6.4.16",
-    "@types/react": "18.3.11",
-    "@types/react-dom": "18.3.0",
+    "@types/react": "npm:types-react@19.0.0-rc.1",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "autoprefixer": "10.4.20",
     "dotenv": "^16.4.5",
     "jiti": "^1.21.6",
@@ -148,5 +148,11 @@
   },
   "engines": {
     "node": ">=18.17"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "npm:types-react@19.0.0-rc.1",
+      "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
+    }
   }
 }
