--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -95,6 +95,7 @@
     "novel": "0.3.1",
     "openai": "^4.67.3",
     "p-queue": "^8.0.1",
+    "p-retry": "^6.2.0",
     "posthog-js": "^1.167.0",
     "posthog-node": "^4.2.0",
     "prettier": "^3.3.3",
