--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -18,6 +18,9 @@
     "@asteasolutions/zod-to-openapi": "^7.2.0",
     "@auth/core": "^0.37.2",
     "@auth/prisma-adapter": "^2.7.2",
+    "@dnd-kit/core": "^6.1.0",
+    "@dnd-kit/sortable": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@formkit/auto-animate": "^0.8.2",
     "@googleapis/gmail": "^12.0.0",
     "@googleapis/people": "^3.0.9",
