--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -12,28 +12,28 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
-    "@ai-sdk/amazon-bedrock": "^0.0.29",
-    "@ai-sdk/anthropic": "^0.0.51",
-    "@ai-sdk/openai": "^0.0.66",
+    "@ai-sdk/amazon-bedrock": "^0.0.33",
+    "@ai-sdk/anthropic": "^0.0.53",
+    "@ai-sdk/openai": "^0.0.70",
     "@asteasolutions/zod-to-openapi": "^7.2.0",
-    "@auth/core": "^0.37.0",
-    "@auth/prisma-adapter": "^2.7.0",
+    "@auth/core": "^0.37.2",
+    "@auth/prisma-adapter": "^2.7.2",
     "@formkit/auto-animate": "^0.8.2",
     "@googleapis/gmail": "^12.0.0",
     "@googleapis/people": "^3.0.9",
-    "@headlessui/react": "^2.1.9",
-    "@hookform/resolvers": "^3.9.0",
+    "@headlessui/react": "^2.2.0",
+    "@hookform/resolvers": "^3.9.1",
     "@inboxzero/loops": "workspace:*",
     "@inboxzero/resend": "workspace:*",
     "@inboxzero/tinybird": "workspace:*",
     "@inboxzero/tinybird-ai-analytics": "workspace:*",
     "@lemonsqueezy/lemonsqueezy.js": "^3.3.1",
-    "@mdx-js/loader": "^3.0.1",
-    "@mdx-js/react": "^3.0.1",
-    "@next/mdx": "15.0.0",
-    "@next/third-parties": "15.0.0",
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "15.0.2",
+    "@next/third-parties": "15.0.2",
     "@portabletext/react": "^3.1.0",
-    "@prisma/client": "^5.20.0",
+    "@prisma/client": "^5.21.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
@@ -48,21 +48,21 @@
     "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
-    "@sanity/client": "^6.22.1",
+    "@sanity/client": "^6.22.2",
     "@sanity/icons": "^3.4.0",
     "@sanity/image-url": "1",
     "@sanity/vision": "3",
-    "@sentry/nextjs": "^8.34.0",
+    "@sentry/nextjs": "^8.35.0",
     "@serwist/next": "^9.0.9",
     "@t3-oss/env-nextjs": "^0.11.1",
     "@tailwindcss/forms": "^0.5.9",
     "@tailwindcss/typography": "^0.5.15",
-    "@tanstack/react-query": "^5.59.8",
+    "@tanstack/react-query": "^5.59.16",
     "@tremor/react": "^3.18.3",
     "@upstash/redis": "^1.34.3",
-    "@vercel/analytics": "^1.3.1",
-    "@vercel/speed-insights": "^1.0.12",
-    "ai": "^3.4.9",
+    "@vercel/analytics": "^1.3.2",
+    "@vercel/speed-insights": "^1.0.14",
+    "ai": "^3.4.27",
     "bull": "^4.16.3",
     "capital-case": "^2.0.0",
     "cheerio": "1.0.0",
@@ -70,53 +70,53 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
     "crisp-sdk-web": "^1.0.25",
-    "date-fns": "^3.6.0",
+    "date-fns": "^4.1.0",
     "diff": "^7.0.0",
     "encoding": "^0.1.13",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "15.0.0",
-    "framer-motion": "^11.11.7",
+    "eslint": "^9.13.0",
+    "eslint-config-next": "15.0.2",
+    "framer-motion": "^11.11.10",
     "gmail-api-parse-message": "^2.1.2",
     "google": "link:@next/third-parties/google",
     "he": "^1.2.0",
     "html-to-text": "^9.0.5",
-    "jotai": "^2.10.0",
+    "jotai": "^2.10.1",
     "json5": "^2.2.3",
     "linkify-react": "^4.1.3",
     "linkifyjs": "^4.1.3",
     "lodash": "^4.17.21",
-    "lucide-react": "^0.451.0",
-    "next": "15.0.0",
+    "lucide-react": "^0.454.0",
+    "next": "15.0.2",
     "next-auth": "5.0.0-beta.24",
     "next-axiom": "^1.5.1",
     "next-sanity": "9",
     "node-email-reply-parser": "^0.1.4",
-    "nodemailer": "^6.9.15",
+    "nodemailer": "^6.9.16",
     "novel": "0.3.1",
-    "openai": "^4.67.3",
+    "openai": "^4.68.4",
     "p-queue": "^8.0.1",
-    "posthog-js": "^1.167.0",
-    "posthog-node": "^4.2.0",
+    "posthog-js": "^1.177.0",
+    "posthog-node": "^4.2.1",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "react": "19.0.0-rc-65a56d0e-20241020",
     "react-day-picker": "8.10.1",
     "react-dom": "19.0.0-rc-65a56d0e-20241020",
     "react-dom-confetti": "^0.2.0",
-    "react-hook-form": "^7.53.0",
-    "react-resizable-panels": "^2.1.4",
+    "react-hook-form": "^7.53.1",
+    "react-resizable-panels": "^2.1.6",
     "react-youtube": "^10.1.0",
-    "sanity": "^3.60.0",
+    "sanity": "^3.62.3",
     "server-only": "^0.0.1",
     "sonner": "^1.5.0",
     "styled-components": "^6.1.13",
     "swr": "2.2.5",
-    "tailwind-merge": "^2.5.3",
+    "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.6.3",
     "usehooks-ts": "^3.1.0",
     "zod": "^3.23.8",
-    "zod-to-json-schema": "^3.23.3"
+    "zod-to-json-schema": "^3.23.5"
   },
   "devDependencies": {
     "@headlessui/tailwindcss": "^0.2.1",
@@ -125,33 +125,33 @@
     "@types/diff": "^5.2.3",
     "@types/he": "^1.2.3",
     "@types/html-to-text": "^9.0.4",
-    "@types/lodash": "^4.17.10",
+    "@types/lodash": "^4.17.13",
     "@types/mdx": "^2.0.13",
-    "@types/node": "22.7.5",
+    "@types/node": "22.8.4",
     "@types/nodemailer": "^6.4.16",
-    "@types/react": "npm:types-react@19.0.0-rc.1",
-    "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
+    "@types/react": "npm:types-react@19.0.0-alpha.3",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-alpha.3",
     "autoprefixer": "10.4.20",
     "dotenv": "^16.4.5",
     "jsdom": "^25.0.1",
     "postcss": "8.4.47",
     "prettier": "^3.3.3",
     "prettier-plugin-tailwindcss": "^0.6.8",
-    "prisma": "^5.20.0",
+    "prisma": "^5.21.1",
     "serwist": "^9.0.9",
-    "tailwindcss": "3.4.13",
+    "tailwindcss": "3.4.14",
     "tsconfig": "workspace:*",
-    "turbo": "^2.1.3",
+    "turbo": "^2.2.3",
     "vite-tsconfig-paths": "^5.0.1",
-    "vitest": "2.1.2"
+    "vitest": "2.1.4"
   },
   "engines": {
     "node": ">=18.17"
   },
   "pnpm": {
     "overrides": {
-      "@types/react": "npm:types-react@19.0.0-rc.1",
-      "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1"
+      "@types/react": "npm:types-react@19.0.0-alpha.3",
+      "@types/react-dom": "npm:types-react-dom@19.0.0-alpha.3"
     }
   }
 }
