--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -100,6 +100,7 @@
     "nuqs": "^2.0.4",
     "openai": "^4.68.4",
     "p-queue": "^8.0.1",
+    "p-retry": "^6.2.0",
     "posthog-js": "^1.177.0",
     "posthog-node": "^4.2.1",
     "prettier": "^3.3.3",
