--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -79,7 +79,7 @@
     "encoding": "^0.1.13",
     "eslint": "^9.13.0",
     "eslint-config-next": "15.0.2",
-    "framer-motion": "^11.11.10",
+    "framer-motion": "12.0.0-alpha.1",
     "gmail-api-parse-message": "^2.1.2",
     "google": "link:@next/third-parties/google",
     "he": "^1.2.0",
