--- a/packages/resend/package.json
+++ b/packages/resend/package.json
@@ -15,8 +15,8 @@
   },
   "devDependencies": {
     "@types/node": "22.8.4",
-    "@types/react": "18.3.12",
-    "@types/react-dom": "18.3.1",
+    "@types/react": "npm:types-react@19.0.0-alpha.3",
+    "@types/react-dom": "npm:types-react-dom@19.0.0-alpha.3",
     "tsconfig": "workspace:*",
     "typescript": "5.6.3"
   }
